fix: topbar shrink on mobile S size

--- a/assets/css/activities.css
+++ b/assets/css/activities.css
@@ -1,6 +1,7 @@
 main {
     flex: 1;
 
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
